--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ ga:
 # Leave empty (just "plausible:" with subitems commented out) to disable.
 #plausible:
 plausible:
-    domain: 'https://marste.github.io/'
+    domain: 'https://marste.github.io/onepage/'
 
 
 # A picture of you, square(!), at least 180x180 pixels, more is better. Recommended file size < 100 KB.
