--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ links:
       name: Instagram
       show: true
       href: https://www.instagram.com/stefanomarzorati
-      icon: fab fa-instagram
+      icon: fa fa-lg fa-instagram
   - soundcloud:
       name: Web Radio
       show: true
